# art-code

./: .clang-format  CMakeLists.txt  README.md
api/: CMakeLists.txt  artcode.cpp  artcode.hpp
assets/: CMakeLists.txt
core/: CMakeLists.txt  app.cpp  app.hpp  art_code.cpp  art_code.hpp
imgui/: CMakeLists.txt
shaders/: CMakeLists.txt  test.frag  test.vert
solution/: CMakeLists.txt  build.cpp  build.hpp
src/: main.cpp
ui/: CMakeLists.txt  main_nav.cpp  main_nav.hpp  navigation.cpp  navigation.hpp  start_screen.hpp  text_editor.cpp  text_editor.hpp  ui.hpp  ui_manager.cpp  ui_manager.hpp  work_space.hpp
ui/start_screen/: artboard_settings.cpp  artboard_settings.hpp  template_gallery.cpp  template_gallery.hpp
ui/workspace/: build_panel.cpp  build_panel.hpp  canvas.cpp  canvas.hpp  console.cpp  console.hpp  development.cpp  development.hpp  navigation.cpp  navigation.hpp  text_editor.cpp  text_editor.hpp
utils/: CMakeLists.txt  artboard_sizes.hpp  nav_items.hpp  resolution.hpp  vertex.hpp  vk_types.hpp
vulkan/: CMakeLists.txt  ndebug.h  vulkan_buffers.cpp  vulkan_buffers.hpp  vulkan_commands.cpp  vulkan_commands.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_graphics.cpp  vulkan_graphics.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
window/: CMakeLists.txt  window.cpp  window.hpp
